--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting-Visualizer</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <header>
     <h1 align="center"> Sorting Visualizer</h1>
     <nav>
