--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting-Visualizer</title>
 </head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 <link rel="stylesheet" href="style.css">
 <header>
     <h1 align="center"> Sorting Visualizer</h1>
@@ -36,7 +38,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js_files/sorting.js"></script>
-    <script src="js_files/bubble.js"></script>
+    <script src="algo/bubble.js"></script>
     <script src="js_files/insertion.js"></script>
     <script src="js_files/merge.js"></script>
     <script src="js_files/quick.js"></script>
