--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <button type="button" class="btn btn-outline-primary btn-dark bubbleSort">Bubble Sort</button>
                 <button type="button" class="btn btn-outline-primary btn-dark selectionSort">Selection Sort</button>
                 <button type="button" class="btn btn-outline-primary btn-dark insertionSort">Insertion Sort</button>
-                <button type="button" class="btn btn-outline-primary btn-dark quickSort">Quick Sort</button>
-                <button type="button" class="btn btn-outline-primary btn-dark mergeSort">Merge Sort</button>
+                <!-- <button type="button" class="btn btn-outline-primary btn-dark quickSort">Quick Sort</button>
+                <button type="button" class="btn btn-outline-primary btn-dark mergeSort">Merge Sort</button> -->
         </div>
     </nav>
 </header>
@@ -40,8 +40,6 @@
     <script src="algo/sorting.js"></script>
     <script src="algo/bubble.js"></script>
     <script src="algo/insertion.js"></script>
-    <script src="js_files/merge.js"></script>
-    <script src="js_files/quick.js"></script>
-    <script src="js_files/selection.js"></script>
+    <script src="algo/selection.js"></script>
 </body>
 </html>
